--- a/lecture_4_addition.ipynb
+++ b/lecture_4_addition.ipynb
@@ -60,35 +60,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[98, 35, 213, 54, 119, 15]\n"
+      "[213, 15, 54, 119, 98, 35]\n"
      ]
     }
    ],
    "source": [
     "ids = {'user1': [213, 213, 213, 15, 213], \n",
     "       'user2': [54, 54, 119, 119, 119], \n",
-    "       'user3': [213, 98, 98, 35]}\n",
-    "print(list((set(ids['user1'])).union(set(ids['user2'])).union(set(ids['user3']))))"
+    "      'user3': [213, 98, 98, 35]} \n",
+    "s = []\n",
+    "[[s.append(y) for y in a if y not in s] for a in ids.values()]\n",
+    "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "4\n"
+      "количество строк из 2 слов = 42%\n",
+      "количество строк из 3 слов = 57%\n"
      ]
     }
    ],
@@ -104,16 +106,14 @@
     "    'курс по питону',\n",
     "    'сериалы про спорт',\n",
     "]\n",
-    "resalt = []\n",
-    "for name in queries:\n",
-    "    a = len(name.split())\n",
-    "    resalt.append(a)\n",
-    "uniq_resalt = set(resalt)\n",
-    "for el in uniq_resalt:\n",
-    "    print(resalt.count(el))\n",
-    "# new_list = {name: len(name.split()) for name in queries if len(name.split()) if len(name.split())}\n",
-    "# new_list.value()\n",
-    "# Запуталась(\n",
+    "len_1 = len(queries)\n",
+    "len_text = []\n",
+    "for itr in queries:\n",
+    "    itr = itr.split()\n",
+    "    len_text.append(len(itr))\n",
+    "    set_text = set(len_text)\n",
+    "for uniq in set_text:    \n",
+    "    print(f'количество строк из {uniq} слов = {int(len_text.count(uniq) / len_1 * 100)}%')\n",
     "    \n"
    ]
   },
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'2018-01-01': {'yandex': {'cpc': {100: {10: {100: 10}}}}}}\n"
+      "{'2018-01-01': {'yandex': {'cpc': 100}}}\n"
      ]
     }
    ],
@@ -158,13 +158,22 @@
     "# Задание 5. Напишите код для преобразования произвольного списка вида \n",
     "# ['2018-01-01', 'yandex', 'cpc', 100] (он может быть любой длины) \n",
     "# в словарь {'2018-01-01': {'yandex': {'cpc': 100}}}\n",
-    "list_new = ['2018-01-01', 'yandex', 'cpc', 100, 10]\n",
-    "dict_n = {list_new[-2]: list_new[-1]}\n",
-    "list_new.reverse()\n",
-    "for new_dict in list_new:\n",
+    "list_new = *a, b, c = ['2018-01-01', 'yandex', 'cpc', 100]\n",
+    "dict_n = {b: c}\n",
+    "# print(dict_n)\n",
+    "a.reverse()\n",
+    "for new_dict in a:\n",
     "    dict_n = {new_dict: dict_n}\n",
+    "\n",
     "print(dict_n)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
