--- a/lecture_4_addition.ipynb
+++ b/lecture_4_addition.ipynb
@@ -82,15 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "количество строк из 2 слов = 42%\n",
-      "количество строк из 3 слов = 57%\n"
+      "количество строк из 2 слов составляет 42%\n",
+      "количество строк из 3 слов составляет 57%\n"
      ]
     }
    ],
@@ -108,12 +108,12 @@
     "]\n",
     "len_1 = len(queries)\n",
     "len_text = []\n",
-    "for itr in queries:\n",
-    "    itr = itr.split()\n",
-    "    len_text.append(len(itr))\n",
-    "    set_text = set(len_text)\n",
+    "for iteration in queries:\n",
+    "    divided_list = iteration.split()\n",
+    "    len_text.append(len(divided_list))\n",
+    "set_text = set(len_text)\n",
     "for uniq in set_text:    \n",
-    "    print(f'количество строк из {uniq} слов = {int(len_text.count(uniq) / len_1 * 100)}%')\n",
+    "    print(f'количество строк из {uniq} слов составляет {int(len_text.count(uniq) / len_1 * 100)}%')\n",
     "    \n"
    ]
   },
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'2018-01-01': {'yandex': {'cpc': 100}}}\n"
+      "{'2018-01-01': {'yandex': {'cpc': {100: {'2018-01-01': {'yandex': {'cpc': {'yandex': {'cpc': {100: {'2018-01-01': 'yandex'}}}}}}}}}}}\n"
      ]
     }
    ],
@@ -158,14 +158,15 @@
     "# Задание 5. Напишите код для преобразования произвольного списка вида \n",
     "# ['2018-01-01', 'yandex', 'cpc', 100] (он может быть любой длины) \n",
     "# в словарь {'2018-01-01': {'yandex': {'cpc': 100}}}\n",
-    "list_new = *a, b, c = ['2018-01-01', 'yandex', 'cpc', 100]\n",
+    "list_new = *a, b, c = ['2018-01-01', 'yandex', 'cpc', 100, '2018-01-01', 'yandex', 'cpc', 'yandex', 'cpc', 100, '2018-01-01', 'yandex']\n",
     "dict_n = {b: c}\n",
     "# print(dict_n)\n",
     "a.reverse()\n",
     "for new_dict in a:\n",
     "    dict_n = {new_dict: dict_n}\n",
     "\n",
-    "print(dict_n)"
+    "print(dict_n)\n",
+    "# В этой задаче все работает, или я не понимаю о какой ошибке Вы мне говорите."
    ]
   },
   {
