--- a/5hw.ipynb
+++ b/5hw.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,18 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "введите номер док-та: 2207 876234\n",
-      "Василий Гупкин\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# p – people – команда, которая спросит номер документа и выведет имя человека, которому он принадлежит;\n",
     "documents = [\n",
@@ -96,25 +87,19 @@
     "    for number in documents:\n",
     "        if number['number'] ==  number_i: \n",
     "            print(number['name'])\n",
-    "print_people(documents)"
+    "            return\n",
+    "    print('имя не найдено')\n",
+    "# print_people(documents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "введите номер док-та: 10006\n",
-      "Полка № 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# s – shelf – команда, которая спросит номер документа и выведет номер полки, на которой он находится\n",
+    "# Правильно обработайте ситуации, когда пользователь будет вводить несуществующий документ.\n",
     "directories = {\n",
     "    '1': ['2207 876234', '11-2'],\n",
     "    '2': ['10006'],\n",
@@ -124,64 +109,34 @@
     "    number_i = input(\"введите номер док-та: \")\n",
     "    for x, b in directories.items():\n",
     "        if number_i in b:\n",
-    "            print(f\"Полка № {x}\") \n",
-    "print_shelf(directories)"
+    "            print(f\"Полка № {x}\")\n",
+    "            return\n",
+    "    print('документ отсутствует')\n",
+    "# print_shelf(directories)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "введите  док-т: invoice\n",
-      "invoice 11-2 Геннадий Покемонов\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# l – list – команда, которая выведет список всех документов в формате\n",
-    "# passport \"2207 876234\" \"Василий Гупкин\"\n",
-    "documents = [\n",
-    "    {'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'},\n",
-    "    {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'},\n",
-    "    {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}\n",
-    "]\n",
+    "#     l – list – команда, которая выведет список всех документов в формате\n",
+    "#     passport \"2207 876234\" \"Василий Гупкин\"\n",
+    "\n",
     "def print_list(com):\n",
-    "    number_i = input(\"введите  док-т: \")\n",
-    "    for number in documents:\n",
-    "        if number['type'] ==  number_i: \n",
-    "            print(f\"{number['type']} {number['number']} {number['name']}\")\n",
-    "print_list(documents)            "
+    "    \n",
+    "    for iter_i in documents:\n",
+    "        print(list(iter_i.values()))\n",
+    "    \n",
+    "# list_dok()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "введите номер новой полки: 3\n",
-      "Полка с таким номером уже существует\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'1': ['2207 876234', '11-2'], '2': ['10006'], '3': []}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# as – add shelf – команда, которая спросит номер новой полки и добавит ее в перечень. Предусмотрите случай, \n",
     "# когда пользователь добавляет полку, которая уже существует.\n",
@@ -194,128 +149,65 @@
     "    number_i = input('введите номер новой полки: ')\n",
     "    if number_i  in directories:\n",
     "        print('Полка с таким номером уже существует')\n",
+    "        return\n",
     "    else:\n",
     "        print(f\"Добавляю полку № {number_i}\")\n",
     "        directories[number_i] = []\n",
-    "    return(directories)\n",
-    "print_add_shelf(directories)"
+    "    print(directories)\n",
+    "    return\n",
+    "# print_add_shelf(directories)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "введите номер документа: 3\n",
-      "Удаляю полку № 3\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'1': ['2207 876234', '11-2'], '2': ['10006']}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# d – delete – команда, которая спросит номер документа и удалит его из каталога и из перечня полок. \n",
     "# Предусмотрите сценарий, когда пользователь вводит несуществующий документ;\n",
-    "directories = {\n",
-    "    '1': ['2207 876234', '11-2'],\n",
-    "    '2': ['10006'],\n",
-    "    '3': []\n",
-    "}\n",
-    "def print_delete(direct):\n",
-    "    number_i = input('введите номер полки: ')\n",
-    "    if number_i not in directories:\n",
-    "        print('Полка с таким номером не существует')\n",
-    "    else:\n",
-    "        print(f\"Удаляю полку № {number_i}\")\n",
-    "        del(directories[number_i])\n",
-    "    return(directories)\n",
-    "print_delete(directories)    "
+    "def delete_number():\n",
+    "    number = input('Введите идентификатор пользователя ')    \n",
+    "    for i_ in documents:    \n",
+    "        if number in i_.values():\n",
+    "            documents.remove(i_)\n",
+    "            for number_dir in directories.values():\n",
+    "                if number in number_dir:            \n",
+    "                    number_dir.remove(number)\n",
+    "                    print_text = print(f'Пользователь {number} удален! {documents} {directories}')\n",
+    "                    return    \n",
+    "    print('Идентификатор не найден')\n",
+    "# delete_number()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "введите номер документа: 10006\n",
-      "введите номер целевой полки: 3\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'1': ['2207 876234', '11-2'], '2': ['10006'], '3': []}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# m – move – команда, которая спросит номер документа и целевую полку и переместит его с текущей полки на целевую. \n",
     "# Корректно обработайте кейсы, когда пользователь пытается переместить несуществующий документ или переместить документ \n",
     "# на несуществующую полку;\n",
-    "directories = {\n",
-    "    '1': ['2207 876234', '11-2'],\n",
-    "    '2': ['10006'],\n",
-    "    '3': []\n",
-    "}\n",
-    "def move(numb):\n",
-    "    number_i = input('введите номер документа: ')\n",
-    "    number_b = input('введите номер целевой полки: ')\n",
-    "    for key, value in directories.items():   \n",
-    "        if number_i in value:                 \n",
-    "            directories[key].remove(number_i)\n",
-    "            if number_b in directories.keys():\n",
-    "                directories[number_b].append(number_i)\n",
-    "        return(directories)\n",
-    "move(directories)"
+    "def move_number():\n",
+    "    number_dok = input('Введите идентификатор пользователя ')\n",
+    "    shelf_dok = input('Введите на какую полку перенести пользователя ')\n",
+    "    result = []    \n",
+    "    for shelf, dok in directories.items():    \n",
+    "        if number_dok in dok and shelf_dok in directories:            \n",
+    "            dok.remove(number_dok)            \n",
+    "            directories[shelf_dok].append(number_dok)            \n",
+    "            print(f'{directories}')\n",
+    "            return             \n",
+    "    result = print('Вводимые данные не верны')\n",
+    "# move_number()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "введите тип документа: insurance\n",
-      "введите номер документа: 11-2\n",
-      "введите имя: Василий Гупкин\n",
-      "введите номер полки: 3\n",
-      "[{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'}, {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'}, {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}, {'type': 'insurance', 'number': '11-2', 'name': 'Василий Гупкин'}]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'1': ['2207 876234', '11-2'], '2': ['10006'], '3': ['11-2']}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# a – add – команда, которая добавит новый документ в каталог и в перечень полок, спросив его номер, тип, имя владельца \n",
     "# и номер полки, на котором он будет храниться. Корректно обработайте ситуацию, когда пользователь будет пытаться добавить\n",
@@ -331,23 +223,28 @@
     "    '3': []\n",
     "}\n",
     "def add(doc, dir_):\n",
-    "    type_= input('введите тип документа: ')\n",
-    "    number_ = input('введите номер документа: ')\n",
-    "    name_ = input('введите имя: ')\n",
-    "    number_shelf = input('введите номер полки: ')\n",
-    "    documents.append({'type': type_ , 'number': number_ , 'name': name_})\n",
-    "    print(documents)\n",
-    "    for key in directories.items():   \n",
-    "        if number_shelf in directories.keys():                 \n",
-    "            directories[number_shelf].append(number_)\n",
-    "        return(directories)\n",
-    "#     print(directories)               \n",
-    "add(documents, directories)"
+    "    name_user = input('Введите имя: ')\n",
+    "    number_user = input('Идентификатор: ')\n",
+    "    type_user = input('Введите тип документа: ')\n",
+    "    number_shelf = input('Номер полки: ')    \n",
+    "    if name_user and number_user and type_user not in documents:\n",
+    "        documents.append({'type': (type_user), 'number': (number_user), 'name': (name_user)})        \n",
+    "        if number_shelf in directories.keys():\n",
+    "            directories[number_shelf].append(number_user)\n",
+    "            print(documents, directories)\n",
+    "            return\n",
+    "        else:\n",
+    "            print('Полка не найдена ')\n",
+    "            return\n",
+    "    else:\n",
+    "        print('Вводимые данные не верны')\n",
+    "        return\n",
+    "# add(documents, directories)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,29 +260,39 @@
     "        elif user_input == \"as\":\n",
     "            print_add_shelf(directories)\n",
     "        elif user_input == \"d\":\n",
-    "            print_delete(directories) \n",
+    "            delete_number() \n",
     "        elif user_input == \"m\":\n",
-    "            move(directories)\n",
+    "            move_number()\n",
     "        elif user_input == \"a\":\n",
     "            add(documents, directories)\n",
-    "            break "
+    "        elif user_input == 'q':\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Введите запрос: m\n",
+      "Введите идентификатор пользователя 11-2\n",
+      "Введите на какую полку перенести пользователя 3\n",
+      "Вводимые данные не верны\n",
+      "Введите запрос: m\n",
+      "Введите идентификатор пользователя 10006\n",
+      "Введите на какую полку перенести пользователя 3\n",
+      "{'1': ['2207 876234'], '2': [], '3': ['10006']}\n",
       "Введите запрос: a\n",
-      "введите тип документа: passport\n",
-      "введите номер документа: 11-2\n",
-      "введите имя: Аристарх Павлов\n",
-      "введите номер полки: 3\n",
-      "[{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'}, {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'}, {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}, {'type': 'insurance', 'number': '11-2', 'name': 'Василий Гупкин'}, {'type': 'passport', 'number': '2207 876234', 'name': 'Аристарх Павлов'}, {'type': 'passport', 'number': '11-2', 'name': 'Аристарх Павлов'}]\n"
+      "Введите имя: Геннадий Покемонов\n",
+      "Идентификатор: 11-2\n",
+      "Введите тип документа: invoice\n",
+      "Номер полки: 1\n",
+      "[{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'}, {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}, {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'}] {'1': ['2207 876234', '11-2'], '2': [], '3': ['10006']}\n",
+      "Введите запрос: q\n"
      ]
     }
    ],
@@ -406,6 +313,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
