--- a/7hw_errors.ipynb
+++ b/7hw_errors.ipynb
@@ -75,55 +75,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Задание 2\n",
+    "# Дан поток дат в формате YYYY-MM-DD, в которых встречаются некорректные значения:\n",
+    "# stream = [‘2018-04-02’, ‘2018-02-29’, ‘2018-19-02’]\n",
+    "# Напишите функцию, которая проверяет эти даты на корректность. Т. е. для \n",
+    "# каждой даты возвращает True (дата корректна) или False (некорректная дата).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Задание 3\n",
-    "from datetime import datetime\n",
-    "from datetime import timedelta"
+    "stream = ['2018-04-02', '2018-02-29', '2018-19-02']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "введите дату начала периода в формате YYYY-MM-DD: 2020-01-01\n",
-      "введите дату окончания периода в формате YYYY-MM-DD: 2020-01-10\n",
-      "2020-01-01\n",
-      "2020-01-02\n",
-      "2020-01-03\n",
-      "2020-01-04\n",
-      "2020-01-05\n",
-      "2020-01-06\n",
-      "2020-01-07\n",
-      "2020-01-08\n",
-      "2020-01-09\n",
-      "2020-01-10\n"
+      "True\n",
+      "False\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "start_date = input('введите дату начала периода в формате YYYY-MM-DD: ')\n",
-    "end_date = input('введите дату окончания периода в формате YYYY-MM-DD: ')\n",
-    "def date_range(a, i):    \n",
-    "    start_date_dt = datetime.strptime(start_date, '%Y-%m-%d')\n",
-    "    end_date_dt = datetime.strptime(end_date, '%Y-%m-%d')\n",
-    "# print(start_date_dt, end_date_dt)\n",
-    "    if start_date_dt > end_date_dt: \n",
-    "        list_=[]\n",
-    "        print(list_)\n",
-    "    list_date = start_date_dt\n",
-    "    while list_date <= end_date_dt:\n",
-    "        print(list_date.strftime('%Y-%m-%d'))\n",
-    "        list_date += timedelta(days=1) \n",
-    "        \n",
-    "date_range(start_date, end_date)        "
+    "def date_list():\n",
+    "    for date in stream:\n",
+    "        try:\n",
+    "            date = datetime.strptime(date, '%Y-%m-%d')\n",
+    "            print(True)\n",
+    "        except :\n",
+    "            print(False) \n",
+    "date_list()"
    ]
   },
   {
