lecture_4_addition_amendments

--- a/lecture_4_addition.ipynb
+++ b/lecture_4_addition.ipynb
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'2018-01-01': {'yandex': {'cpc': {100: {'2018-01-01': {'yandex': {'cpc': {'yandex': {'cpc': {100: {'2018-01-01': 'yandex'}}}}}}}}}}}\n"
+      "{'2018-01-01': {'yandex': {'cpc': 100}}}\n"
      ]
     }
    ],
@@ -158,15 +158,16 @@
     "# Задание 5. Напишите код для преобразования произвольного списка вида \n",
     "# ['2018-01-01', 'yandex', 'cpc', 100] (он может быть любой длины) \n",
     "# в словарь {'2018-01-01': {'yandex': {'cpc': 100}}}\n",
-    "list_new = *a, b, c = ['2018-01-01', 'yandex', 'cpc', 100, '2018-01-01', 'yandex', 'cpc', 'yandex', 'cpc', 100, '2018-01-01', 'yandex']\n",
-    "dict_n = {b: c}\n",
-    "# print(dict_n)\n",
-    "a.reverse()\n",
-    "for new_dict in a:\n",
-    "    dict_n = {new_dict: dict_n}\n",
-    "\n",
-    "print(dict_n)\n",
-    "# В этой задаче все работает, или я не понимаю о какой ошибке Вы мне говорите."
+    "arbitrary_list = ['2018-01-01', 'yandex', 'cpc', 100] \n",
+    "if len(arbitrary_list) <= 1:\n",
+    "    print('не корректная длинна')\n",
+    "else:\n",
+    "    list_new = *a, b, c = arbitrary_list\n",
+    "    dict_n = {b: c}\n",
+    "    a.reverse()\n",
+    "    for new_dict in a:\n",
+    "        dict_n = {new_dict: dict_n}\n",
+    "    print(dict_n)\n"
    ]
   },
   {
